[gd_scene load_steps=9 format=2]

[ext_resource path="res://Enemies/EnemyFly/fly-eye1.png" type="Texture" id=1]
[ext_resource path="res://Enemies/EnemyFly/EnemyFly.gd" type="Script" id=2]
[ext_resource path="res://Enemies/EnemyFly/fly-eye2.png" type="Texture" id=3]
[ext_resource path="res://Enemies/EnemyFly/fly-eye3.png" type="Texture" id=4]
[ext_resource path="res://Enemies/EnemyFly/fly-eye4.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 7.0

[sub_resource type="RectangleShape2D" id=4]

[node name="EnemyFly" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
frame = 1
playing = true

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 2 )

[node name="RayCasts" type="Node2D" parent="."]

[node name="TopDetector" type="RayCast2D" parent="RayCasts"]
position = Vector2( 0, -9 )
rotation = -3.14159
enabled = true
cast_to = Vector2( 0, 5 )

[node name="BottomDetector" type="RayCast2D" parent="RayCasts"]
position = Vector2( 0, 9 )
enabled = true
cast_to = Vector2( 0, 5 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 4 )

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
